Make more friendly with Java 9+